--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Course</h1>
+    <h1>Bachelor of Statistical Data Science (BSDS)</h1>
     <p>This is a simple course webpage hosted on GitHub Pages.</p>
 </body>
 </html>
