--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
     <h1>Bachelor of Statistical Data Science (BSDS)</h1>
-    <p>This is a simple course webpage hosted on GitHub Pages.</p>
+    <p>Physics</p>
 </body>
 </html>
