--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <h1>Bachelor of Statistical Data Science (BSDS)</h1>
     <p>Physics</p>
-<a href = "Assignment 1.pdf" download> Assigment 1 - Thermodynamics</a>
-<a href = "SCALIN~1.pdf" download> Scaling and Renormalization in Statistical Physics by John L Cardy</a>
+<a href = "Assignment 1.pdf" download> Assigment 1 - Thermodynamics</a><br>
+<a href = "SCALIN~1.PDF" download> Scaling and Renormalization in Statistical Physics by John L Cardy</a>
 </body>
 </html>
