--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Bachelor of Statistical Data Science (BSDS)</h1>
-    <p>Physics</p>
+    <h2>Physics</h2>
 <a href = "Assignment 1.pdf" download> Assigment 1 - Thermodynamics</a><br>
 <a href = "SCALIN~1.PDF" download> Scaling and Renormalization in Statistical Physics by John L Cardy</a>
 </body>
