--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Website</title>
+    <title>Physics BSDS</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,6 +21,7 @@
     <h1>Bachelor of Statistical Data Science (BSDS)</h1>
     <h2>Physics</h2>
 <a href = "Assignment 1.pdf" download> Assigment 1 - Thermodynamics</a><br>
+<br>
 <a href = "SCALIN~1.PDF" download> Scaling and Renormalization in Statistical Physics by John L Cardy</a>
 </body>
 </html>
