--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
     <h1>Bachelor of Statistical Data Science (BSDS)</h1>
     <h2>Physics</h2>
-<a href = "Assignment 1.pdf" download style="text-decoration: none;> Assigment 1 - Thermodynamics</a><br>
+<a href = "Assignment 1.pdf" download style="text-decoration: none;"> Assigment 1 - Thermodynamics</a><br>
 <br>
-<a href = "SCALIN~1.PDF" download style="text-decoration: none;> Scaling and Renormalization in Statistical Physics by John L Cardy</a><br>
+<a href = "SCALIN~1.PDF" download style="text-decoration: none;"> Scaling and Renormalization in Statistical Physics by John L Cardy</a><br>
 <br>
 </body>
 </html>
