--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
 <br>
 <a href = "SCALIN~1.PDF" download style="text-decoration: none;"> Scaling and Renormalization in Statistical Physics by John L Cardy</a><br>
 <br>
+<a href = "BSDS NOTES_Prabuddha.pdf" download style="text-decoration: none;"> Prabuddha Sir notes part 1</a><br>
+<br>
+<a href = "BSDS Physics. Lecture Notes Part 2.pdf" download style="text-decoration: none;"> Prabuddha Sir notes part 2</a><br>
+<br>
 </body>
 </html>
