--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <body>
     <h1>Bachelor of Statistical Data Science (BSDS)</h1>
     <h2>Physics</h2>
+<a href = "Thermodynamics-BSDS.pdf" download style="text-decoration: none;"> Thermodynamics - Subhir Ghosh</a><br>
+<br>
+<a href = "stat mech till midsem syllabus_compressed.pdf" download style="text-decoration: none;"> Statistical Mechanics till midsem - Subhir Ghosh</a><br>
+<br>
 <a href = "Assignment 1.pdf" download style="text-decoration: none;"> Assigment 1 - Thermodynamics</a><br>
 <br>
 <a href = "SCALIN~1.PDF" download style="text-decoration: none;"> Scaling and Renormalization in Statistical Physics by John L Cardy</a><br>
